--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,38 +3,20 @@
 <table class="table table-bordered">
   <thead>
     <tr>
-      <th>
-        #
-      </th>
-      <th>
-        email
-      </th>
-      <th>
-        is_admin?
-      </th>
-      <th>
-        is_actived?
-      </th>
-      <th>
-        options
-      </th>
+      <th> # </th>
+      <th> email </th>
+      <th> is_admin? </th>
+      <th> is_actived? </th>
+      <th> options </th>
     </tr>
   </thead>
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td>
-          <%= user.id %>
-        </td>
-        <td>
-          <%= user.email %>
-        </td>
-        <td>
-          <%= user.is_admin %>
-        </td>
-        <td>
-          <%= user.is_actived %>
-        </td>
+        <td> <%= user.id %> </td>
+        <td> <%= user.email %> </td>
+        <td> <%= user.is_admin %> </td>
+        <td> <%= user.is_actived %> </td>
         <td>
           <%= link_to("active", active_admin_user_path(user), method: :post, class: "btn btn-default" ) %>
           <%= link_to("disactive", dis_active_admin_user_path(user), method: :post, class: "btn btn-default" ) %>
