--- a/app/views/digruby/index.html.erb
+++ b/app/views/digruby/index.html.erb
@@ -1,30 +1,51 @@
 <h1>Dig Ruby!!!!!</h1>
 
+<% if current_mcart.new_cart? %>
+  <%= link_to("Rush to Dig Rubies!", start_digging_digruby_path(current_mcart), method: :post, class: "btn btn-danger")  %>
+<% elsif current_mcart.cart_of_minerals? %>
+  <%= link_to("select your mineral and get rubies", select_mineral_digruby_path(current_mcart), method: :post, class: "btn btn-primary") %>
+<% else %>
+  <%= link_to("dig another cart of minerals!", dig_again_digruby_path(current_mcart), method: :post, class: "btn btn-info") %>
+<% end %>
+
+<%= current_mcart.aasm_state %>
+
+<hr>
+
+
 <div class="container-fluid">
   <table class="table">
     <tr>
       <td>
-        <%= link_to(" ", "#", class: "btn active lovely") %>
+        <%= link_to("5Rubies ", "#", class: "btn active lovely") %>
       </td>
       <td>
+        <%= link_to("5Rubies ", "#", class: "btn active lovely") %>
       </td>
       <td>
-      </td>
-    </tr>
-    <tr>
-      <td>
-      </td>
-      <td>
-      </td>
-      <td>
+        <%= link_to("5Rubies ", "#", class: "btn active lovely") %>
       </td>
     </tr>
     <tr>
       <td>
+        <%= link_to("5Rubies ", "#", class: "btn active lovely") %>
       </td>
       <td>
+        <%= link_to("5Rubies ", "#", class: "btn active lovely") %>
       </td>
       <td>
+        <%= link_to("5Rubies ", "#", class: "btn active lovely") %>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <%= link_to("5Rubies ", "#", class: "btn active lovely") %>
+      </td>
+      <td>
+        <%= link_to("5Rubies ", "#", class: "btn active lovely") %>
+      </td>
+      <td>
+        <%= link_to("5Rubies ", "#", class: "btn active lovely") %>
       </td>
     </tr>
   </table>
