--- a/app/views/digruby/index.html.erb
+++ b/app/views/digruby/index.html.erb
@@ -1,18 +1,20 @@
 <h1>Dig Ruby!!!!!</h1>
 
 <% if current_mcart.new_cart? %>
+  <%= current_mcart.aasm_state %>
   <%= link_to("Rush to Dig Rubies!", start_digging_digruby_path(current_mcart), method: :post, class: "btn btn-danger")  %>
 <% elsif current_mcart.cart_of_minerals? %>
+  <%= current_mcart.aasm_state %>
   <%= link_to("select your mineral and get rubies", select_mineral_digruby_path(current_mcart), method: :post, class: "btn btn-primary") %>
 <% else %>
+  <%= current_mcart.aasm_state %>
   <%= link_to("dig another cart of minerals!", dig_again_digruby_path(current_mcart), method: :post, class: "btn btn-info") %>
 <% end %>
 
-<%= current_mcart.aasm_state %>
-
 <hr>
 
-
+<% @minerals.each do |mineral| %>
+<% end %>
 <div class="container-fluid">
   <table class="table">
     <tr>
