--- a/app/assets/stylesheets/digruby.scss
+++ b/app/assets/stylesheets/digruby.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.lovely {
+.mineral {
   background-color: #666666;
   color: #00000;
   width: 150px;
@@ -10,7 +10,7 @@
 }
 
 
-.lovely:hover {
+.mineral:hover {
   background-color: #ff6666;
   color: #00000;
   width: 150px;
