--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,9 +12,25 @@
     <div class="container-fluid">
       <%= render 'common/navbar' %>
       <%= render 'common/flashes' %>
-      <%= yield %>
     </div>
 
+          <div class="row">
+
+              <div class="col-md-2">
+                <ul class="nav nav-pills nav-stacked" style="max-width: 300px; padding-top:20px;">
+
+                  <li class="active"><%= link_to("Users", admin_users_path ) %> </li>
+                  <li class="active"><%= link_to("pickax tasks", admin_pickax_tasks_path ) %> </li>
+
+                  <hr>
+                </ul>
+              </div>
+
+              <div class="col-md-10">
+                <%= yield %>
+              </div>
+
+            </div>
     <%= render 'common/footer' %>
   </body>
 </html>
