--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -1,7 +1,6 @@
-<h1>Ruby Rush!按照被投票的时间从新到旧</h1>
+<h1>Leader Board!（按照票数领先）</h1>
 
-<h2>可点击到具体的页面</h2>
-<% link_to("New Question?", new_post_path, class: "btn btn-danger btn-lg pull-right") %>
+<%= link_to("New Question?", leaderboard_index_path, class: "btn btn-danger btn-lg pull-right") %>
 
 <br><br><br><hr>
 
@@ -20,12 +19,16 @@
     <% @posts.each do |post| %>
       <tr>
         <td> <%= post.id %></td>
-        <td> <%= link_to(post.title, post, class: "btn btn-lg btn-danger") %> </td>
+        <td> <%= link_to(post.title, post) %> </td>
         <td> <%= post.description %></td>
         <td> <%= post.user.email %> </td>
         <td> <%= post.updated_at %> </td>
-        <td> <%= post.votes.count %> </td>
-        <td> <%= link_to("顶这个问题！", upvote_post_path(post), method: :post, data: {confirm: '用1个ruby来顶？'}, class: "btn btn-info") %> </td>
+        <td>
+          <%= post.votes.count %>
+        </td>
+        <td>
+          <%= link_to("vote for it!!!", upvote_leaderboard_path(post), method: :post, class: "btn btn-info") %>
+        </td>
       </tr>
     <% end %>
   </tbody>
