--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,12 @@
 <footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2016 RubyRush
+	<font color="#f01d1d">
+	<nav class="navbar navbar-default" role="navigation">
+	    <div class="container-fluid">
+	        <!-- Brand and toggle get grouped for better mobile display -->
+	        <div class="navbar-header pull-right">
+						    <p class="text-center"> Copyright ©2016 RubyRush
         <br>Design by Homer and David
 
     </p>
+</font>
 </footer>
