--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,11 @@
-<h1>Ruby Rush!</h1>
+<font color="#BFBFBF">
+	<h1>Ruby Rush!</h1>
 
 <%= link_to("New Question?", new_post_path, class: "btn btn-danger btn-lg pull-right") %>
 
 <br><br><br><hr>
+
+
 
 <table class="table table-bordered">
   <thead>
@@ -33,3 +36,4 @@
     <% end %>
   </tbody>
 </table>
+</font>
