--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,7 +2,11 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Ruby Rush! </a>
+            <a class="navbar-brand" href="/">
+							<i class="fa fa-diamond" aria-hidden="true"></i>
+							RUBY RUSH
+							<i class="fa fa-diamond" aria-hidden="true"></i>
+						</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
