--- a/app/views/leaderboard/index.html.erb
+++ b/app/views/leaderboard/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Leader Board!（按照票数领先）</h1>
 
-<%= link_to("New Question?", leaderboard_index_path, class: "btn btn-danger btn-lg pull-right") %>
+<%= link_to("New Question?", new_leaderboard_path, class: "btn btn-danger btn-lg pull-right") %>
 
 <br><br><br><hr>
 
