--- a/app/views/yourboard/index.html.erb
+++ b/app/views/yourboard/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Your Board! 看见自己提出问题和支持的问题的地方（后者有BUG）</h1>
 <h2>顺序为票数由少到多</h2>
-<%= link_to("New Question?", yourboard_index_path, class: "btn btn-danger btn-lg pull-right") %>
+<%= link_to("New Question?", new_yourboard_path, class: "btn btn-danger btn-lg pull-right") %>
 
 <br><br><br><hr>
 
