--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -20,7 +20,7 @@
                 <ul class="nav nav-pills nav-stacked" style="max-width: 300px; padding-top:20px;">
 
                   <li class="active"><%= link_to("Users", admin_users_path ) %> </li>
-                  <li class="active"><%= link_to("pickax tasks", admin_pickax_tasks_path ) %> </li>
+                  <li class="active"><%= link_to("pickax tasks", admin_ptasks_path ) %> </li>
 
                   <hr>
                 </ul>
