--- a/app/views/ptasks/index.html.erb
+++ b/app/views/ptasks/index.html.erb
@@ -1,5 +1,4 @@
-<h1>后台发布pickax任务</h1>
-<%= link_to("新建任务", new_admin_pickax_task_path, class: "btn btn-primary pull-right") %>
+<h1>完成任务，获得铁镐！</h1>
 
 <table class="table table-bordered">
   <thead>
@@ -32,11 +31,9 @@
         </td>
         <td>
           <%= pluralize(ptask.reward, "pickax") %>
-          2131231
         </td>
         <td>
-          123231312
-          <%= link_to("edit", edit_admin_ptask_path, class: "btn btn-primary") %>
+          <%= link_to("申请执行任务", "#", data: {confirm: "申请个毛啊，完成了任务和管理员说一声！"}, class: "btn btn-primary") %>
         </td>
       </tr>
     <% end %>
