--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -52,3 +52,10 @@
 <audio id="audio" src="click.mp3" ></audio>
 
 </font>
+
+
+<%= link_to("Test 1", "#", class: "btn btn-primary btn-lg")  %>
+<%= link_to("Test 2", "#", class: "btn btn-primary btn-xs")  %>
+<%= link_to("Test 3", "#", class: "btn btn-primary btn-md")  %>
+<%= link_to("Test 4", "#", class: "btn btn-primary btn-lg")  %>
+<%= link_to("Test 5", "#", class: "btn btn-primary btn-lg")  %>
