--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -3,7 +3,7 @@
 	<nav class="navbar navbar-default" role="navigation">
 	    <div class="container-fluid">
 	        <!-- Brand and toggle get grouped for better mobile display -->
-	        <div class="navbar-header pull-right">
+	        <div class="navbar-default pull-right">
 						    <p class="text-center"> Copyright ©2016 RubyRush
         <br>Design by Homer and David
 
