--- a/app/assets/stylesheets/digruby.scss
+++ b/app/assets/stylesheets/digruby.scss
@@ -2,17 +2,17 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.mineral {
-  background-color: #666666;
-  color: #00000;
-  width: 150px;
-  height: 150px;
-}
-
-
-.mineral:hover {
-  background-color: #ff6666;
-  color: #00000;
-  width: 150px;
-  height: 150px;
-}
+// .mineral {
+//   background-color: #666666;
+//   color: #00000;
+//   width: 150px;
+//   height: 150px;
+// }
+//
+//
+// .mineral:hover {
+//   background-color: #ff6666;
+//   color: #00000;
+//   width: 150px;
+//   height: 150px;
+// }
