--- a/app/views/digruby/_cart_of_rubies.html.erb
+++ b/app/views/digruby/_cart_of_rubies.html.erb
@@ -24,4 +24,4 @@
 
 </table>
 
-<%= link_to("再来一镐！", digruby_dig_again_path(current_mcart), method: :post, class: "btn btn-primary") %>
+<%= link_to("再来一镐！", digruby_dig_again_path(current_mcart), method: :post, class: "btn btn-primay") %>
