--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,42 @@ body {
 			url(cave2.jpg);
 }
 
+.sidebar {
+  font-size: 1.2em;
+  text-align: left;
+  height: 35px;
+  width: 150px;
+  margin-bottom: 10px;
+}
+
+.sidebar:hover {
+  font-size: 1.5em;
+  text-align: right;
+  height: 50px;
+  width: 200px;
+  margin-bottom: -5px;
+  border-style: ridge;
+  border-width: medium;
+  border-color: yellow;
+}
+
+.post {
+  height: 600px;
+  padding: 15px, 15px, 15px, 15px;
+  background: url('scroll.png');
+  background-size:contain;
+}
+
+
+
+.sign {
+  height: 75px;
+  width: 150px;
+  background: url('sign.png');
+  background-size:contain;;
+  
+}
+
 .jumbotron {
 			width:100%;
 			height:400px;
@@ -72,7 +108,7 @@ body {
   		background-size: contain;
       width: 100px;
       height: 100px;
-      
+
   }
 
 // .rubystone_unselected
