--- a/app/views/digruby/_cart_of_minerals.html.erb
+++ b/app/views/digruby/_cart_of_minerals.html.erb
@@ -1,6 +1,34 @@
 <h1>用铁镐敲碎矿石吧！</h1>
 
+<div onclick="play()">
+  <% @minerals.each do |mineral| %>
+    <%= link_to("", select_mineral_digruby_mineral_path(current_mcart, mineral), method: :post , class: "btn mineral digging") %>
+  <% end %>
+</div>
 
-<% @minerals.each do |mineral| %>
-  <%= link_to("", select_mineral_digruby_mineral_path(current_mcart, mineral), method: :post , class: "btn mineral digging") %>
-<% end %>
+<!-- <html>
+<head>
+<script type="text/javascript" src="/jquery/jquery.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+  $("p").click(function(){
+    $("audio#audio").play();
+  });
+  $("p").dblclick(function(){
+    $("button").click();
+  });
+});
+<audio id="audio" src="click.mp3" ></audio>
+</script>
+</head>
+<body>
+<button>点击这里进行切换</button>
+<p>双击本段落会触发上面这个按钮的 click 事件。</p>
+</body>
+</html> -->
+
+
+
+
+<!-- <input type="button" value="PLAY"  onclick="play()"> -->
+<audio id="audio" src="click.mp3" ></audio>
