--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,5 +1,39 @@
 <font color="#BFBFBF">
-  1.注册后，请找Daived(朱英楠)和Homer(曾洲)激活
 
-2.登陆后就可以自由提问，但投票支持问题需要
+  <div class="jumbotron">
+        <div class="container">
+  				<div class="arriv-dz">
+            <h2>有些表达，还在呼唤更轻松更自由更快乐的场合。</h2>
+            <h2>有些幸运，可以分享,因为会 <i><strong style="font-size: 1.5em">越分享越多</strong></i>。</h2>
+            <h2>把你希望在餐会上问出的问题在这里说出来吧，用投票筛选出高效的问题</h2>
+            <h2>也许那幸运儿会获得灵感</h2>
+
+          <ol>
+            <li>
+
+              注册后，请找David(朱英楠)和Homer(曾洲)激活
+            </li>
+            <li>
+
+              登陆后就可以自由提问，消耗Ruby <i class="fa fa-diamond" aria-hidden="true" style="color: red;"></i>来支持提问
+            </li>
+
+            <li>
+                可以消耗 铁镐 来    <strong>挖</strong> 矿石
+            </li>
+            <li>
+          可以去完成任务，获得   <i style="font-size: 2em">铁镐 </i><i class="fa fa-gavel" aria-hidden="true" style="color: red;"></i>
+            </li>
+          </ol>
+  					<div class="crt-btn">
+  					<!-- <p><%= link_to("Take a Look") %></p > -->
+  					</div>
+  				</div>
+  			</div>
+  </div>
+
+
+
+
+
 </font>
