--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -2,7 +2,9 @@
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a class="navbar-brand navbar-header" href="/">Ruby Rush! </a>
+            <a class="navbar-brand navbar-header" href=" ">
+							<i class="fa fa-diamond" aria-hidden="true"></i> Ruby Rush <i class="fa fa-diamond" aria-hidden="true"></i> </a >
+						<p class="navbar-brand navbar-header navbar-subscript"> <sub> 挖掘Ruby宝藏，提问Xdite大神! </sub> </p >
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
